Fixed issue causing the input fields in the shoppingListEdit component to be stuck at 180px breaking my mobile layout.

--- a/client/src/app/Recipe/recipe-edit/recipe-edit.component.scss
+++ b/client/src/app/Recipe/recipe-edit/recipe-edit.component.scss
@@ -67,9 +67,9 @@ mat-card-header {
   }
 }
 
-@media (max-width: 800px) {
-  .mat-card-header {
-    display: block;
+@media (max-width: 1000px) {
+  mat-card .mat-card-header {
+    flex-direction: column;
     mat-form-field {
       width: 100%;
     }
