--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -4,7 +4,7 @@
   width: 90vw;
   grid-template-columns: 2fr 1fr;
   gap: 10px;
-  margin: 0 auto;
+  margin: 0 auto 50px auto;
   transition: all 0.25s ease;
 
   @media (max-width: 800px) {
